Suppress select label to prevent Ui overflows

--- a/client/app/styles/components/_forms.styl
+++ b/client/app/styles/components/_forms.styl
@@ -24,6 +24,9 @@ label.with-input
             border-color        $blue
             background-color    rgba($grey-01, 0.25)
 
+    select
+        padding-top .6em
+
     &[aria-invalid=true]
         input[type=text]
         input[type=email]
